--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div align="center">
     <img src="aar_logo_final.png" style="max-width: 20%;">
     <h1>Congratulations!!! </h1>
-      <h2>Welcome to AAR SOURCE| Grp 52</h2>
+      <h2>Welcome | Grp 52</h2>
     <h3>This application was deployed using AWS CodeDeploy.</h3>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
