--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <h1>Congratulations!!! </h1>
       <h2>Welcome | Grp 52</h2>
     <h3>This application was deployed using AWS CodeDeploy.</h3>
+    <p>Below is the reference</p>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
